<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
        Item IDs must exactly match the fragment IDs in nav_graph.xml.
        NavigationUI.setupWithNavController() uses the ID to find the destination.
    -->

    <item
        android:id="@+id/homeMapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/resultsFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_results" />

    <item
        android:id="@+id/cellularFragment"
        android:icon="@drawable/ic_cellular"
        android:title="@string/nav_cellular" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
